Make sure graphviz is available on build Signed-off-by:Phillip Kruger <phillip.kruger@gmail.com>